--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=course
 spring.profiles.active=test
 spring.jpa.open-in-view=true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
